changes in css of appointment booking

--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1114,3 +1114,12 @@ border-bottom: 1px #ccc;
 
 
 /* webinar info css ends */
+
+
+
+
+.slot-button:disabled {
+  background-color: grey;
+  color: #ccc;
+  cursor: not-allowed;
+}
