--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,5 +1,11 @@
 *{
   background-color: rgb(255, 255, 255);
+  
+}
+h1,
+p {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .notification-badge {
@@ -417,6 +423,180 @@ border-bottom: 1px #ccc;
   }
 }
 
+.main-container{
+  width: 100%;
+}
+.our-speciality-outer-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.our-speciality-outer-container h1{
+  text-align: center;
+  width: 50%;
+}
+.our-speciality-inner-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 90%;
+  margin-top: 20px;
+}
+.our-speciality-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-basis: 200;
+  width: auto;
+  margin: 20px;
+}
+.our-speciality-container p{
+  width: 250px;
+  text-align: center;
+}
+.our-speciality-container i{
+  background-color: rgba(233, 233, 233, 0.382);
+  padding: 10px;
+  border-radius: 500px;
+  color: blue;
+}
+.bold{
+  font-weight: 800;
+}
+.thin{
+  font-size: 12px;
+  color: rgb(161, 161, 161);
+}
+
+.steps-outer-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+ 
+}
+.steps-outer-flex-container{
+  display: flex;
+  justify-content: space-between;
+  
+  
+  
+  width: 90%;
+  background-color: blue;
+  padding: 30px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  border-radius: 20px;
+}
+.steps-outer-container p{
+color: aliceblue;
+}
+.steps-outer-container h1{
+  color: aliceblue;
+}
+.steps-inner-container2{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+ width: 50%;
+ background-color: blue;
+ 
+}
+.steps-inner-flex-container2{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 10px;
+  background-color: blue;
+
+}
+.steps-inner-flex-container2 h1{
+  transform: translate(-10px,20px);
+  color: rgb(129, 129, 255);
+  z-index: 0;
+  background-color: blue;
+}
+.steps-inner-container1 h1{
+  background-color: blue;
+}
+.steps-inner-container1 p{
+  background-color: blue;
+}
+.steps-inner-flex-container2 i{
+  background-color: aliceblue;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  text-align: center;
+  align-content: center;
+  border-radius: 5px;
+  z-index: 1;
+  color: blue;
+  
+}
+.steps-inner-flex-container2 p{
+  background-color: blue;
+}
+.steps-inner-container1{
+  margin-top: 50px;
+  background-color:blue;
+}
+.bold-white{
+  font-weight: 800;
+}
+.thin-white{
+  font-size: 12px;
+  color: white;
+}
+.trust-outer-container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+ 
+
+}
+.trust-inner-container{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+
+}
+.thin2{
+  font-size: 12px;
+  width:250px;
+  text-align: center;
+}
+.trust-inner-flex-container{
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 200;
+  margin: 20px;
+}
+.trust-inner-flex-container i{
+  color: blue;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  align-content: center;
+  background-color: rgba(233, 233, 233, 0.382);
+  padding: 10px;
+  border-radius: 20px;
+}
 
 
 
