--- a/Client/src/Components/Stylesheets/AppointmentBooking.css
+++ b/Client/src/Components/Stylesheets/AppointmentBooking.css
@@ -346,11 +346,35 @@ height: 40px;
     width: 100%;
   }
 
-  .submit-btn {
-    width: 100%;
-    font-size: 18px;
-  }
+
 }
+
+.submit-btn {
+  width: 100%;
+  font-size: 18px;
+  display: inline-block;
+  padding: 10px;
+  font-size: 1rem; /* Ensure consistent font size */
+  color: #fff;
+  background-color: #007bff; /* Fallback color */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-image: linear-gradient(90deg, #0056b3 50%,  #007bff 50%);
+  background-size: 200%; /* Control the size for the animation effect */
+  background-position: right; /* Start from the right */
+  transition: background-position 0.5s ease-in-out, color 0.5s ease-in-out; /* Animation transition */
+}
+
+.submit-btn:hover {
+  background-position: left; /* Move to the left on hover */
+}
+
+.submit-btn:not(:hover) {
+  transition: none; /* Disable transition when not hovering */
+}
+
+
 
 /* Extra Small Devices (Phones) */
 @media (max-width: 412px) {
